<resources>
    <string name="app_name">Prianly</string>
    <string name="title_home">Home</string>
    <string name="title_list_lyrics">List Lyrics</string>
    <string name="title_account">Account</string>
    <string name="hello_prianly_lovers">Hello, Prianly Lovers !</string>
    <string name="list_lyrics">List Lyrics</string>
    <string name="pesan_terakhir">Pesan Terakhir</string>
    <string name="lyodra">Lyodra</string>
    <string name="akad">Akad</string>
    <string name="payung_teduh">Payung Teduh</string>
    <string name="cukup_tau">Cukup Tau</string>
    <string name="rizky_febian">Rizky Febian</string>
    <string name="ashilla">Ashilla</string>
    <string name="tuyu">TUYU</string>
    <string name="if_there_was_an_endpoint">If there was an Endpoint.</string>
    <string name="my_favorite">My Favorite</string>
    <string name="me_and_you">Me and You</string>
</resources>