<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_rect"
        android:backgroundTint="@color/prianly"
        app:elevation="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="20dp"
                android:text="@string/list_lyrics" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:id="@+id/icon_logo"
                android:layout_marginStart="220dp"
                android:src="@drawable/ic_logo" />

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="25dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <SearchView
                    android:id="@+id/searchLyric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:paddingStart="-10dp"
                    android:queryHint="Find Lyrics"
                    android:searchIcon="@drawable/ic_search"
                    android:theme="@style/Widget.AppCompat.SearchView"
                    app:queryBackground="@android:color/transparent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_baseline_queue_music_24"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:text="@string/pesan_terakhir"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="70dp"
                    android:text="@string/lyodra"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_circle"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="330dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
                <View
                    android:layout_width="370dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#FF0000FF"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    android:layout_marginTop="110dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_queue_music_24"
                    android:layout_marginTop="140dp"
                    android:layout_marginStart="20dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="140dp"
                    android:text="@string/akad"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="170dp"
                    android:text="@string/payung_teduh"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_circle"
                    android:layout_marginTop="140dp"
                    android:layout_marginStart="330dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                <View
                    android:layout_width="370dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="210dp"
                    android:background="#FF0000FF"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_queue_music_24"
                    android:layout_marginTop="240dp"
                    android:layout_marginStart="20dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="240dp"
                    android:text="@string/cukup_tau"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="270dp"
                    android:text="@string/rizky_febian"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_circle"
                    android:layout_marginTop="240dp"
                    android:layout_marginStart="330dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
                <View
                    android:layout_width="370dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#FF0000FF"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    android:layout_marginTop="310dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_queue_music_24"
                    android:layout_marginTop="340dp"
                    android:layout_marginStart="20dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="340dp"
                    android:text="@string/me_and_you"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="370dp"
                    android:text="@string/ashilla"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_circle"
                    android:layout_marginTop="340dp"
                    android:layout_marginStart="330dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
                <View
                    android:layout_width="370dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#FF0000FF"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    android:layout_marginTop="410dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_queue_music_24"
                    android:layout_marginTop="440dp"
                    android:layout_marginStart="20dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="440dp"
                    android:text="@string/if_there_was_an_endpoint"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="470dp"
                    android:text="@string/tuyu"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="80dp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_circle"
                    android:layout_marginTop="440dp"
                    android:layout_marginStart="330dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark" />
                <View
                    android:layout_width="370dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:background="#FF0000FF"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    android:layout_marginTop="510dp"/>
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>